src/objects/ProposalGrant__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001AIvJEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N30000000xlW5EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N300000019tqTEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProposalGrant</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ProposalGrant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProposalGrants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>